# rust-crud

./: .env.sample  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 0000_extensions.sql  0001_user.sql  0001_users.sql
src/: config.rs  jwt.rs  keygen.rs  main.rs  schemas.rs  user.rs
src/routes/: jwt.rs  mod.rs  recipes.rs  todos.rs  users.rs
