[package]
name = "rust-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = [ "full" ] }
sqlx = { version = "0.7.2", features = [ "postgres", "runtime-tokio-rustls", "chrono", "uuid" ] }
axum = { version = "0.6.20", features = [ "headers" ] }
serde = "1.0.192"
chrono = { version = "0.4.31", features = [ "serde" ] }
uuid = { version = "1.5.0", features = [ "v4", "serde" ] }
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
tower = "0.4.13"

